--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
 configure_file(input.txt input.txt COPYONLY)
 
-set(SOURCE_FILES main.cpp Dictionary.cpp Word.cpp Gram.cpp)
+set(SOURCE_FILES main.cpp Dictionary.cpp Word.cpp Gram.cpp Parser.cpp)
 add_executable(shingles ${SOURCE_FILES})
