Dictionary save and load Command line arguments Interactive console for debug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,16 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 #pkg_check_modules(JSONCPP REQUIRED jsoncpp)
 set(JSONCPP_INCLUDE_DIRS vendor/jsoncpp)
 
-include_directories(${JSONCPP_INCLUDE_DIRS})
+include_directories(
+    ${JSONCPP_INCLUDE_DIRS}
+    vendor/linenoise
+    vendor/optionparser
+)
 #link_directories(${JSONCPP_LIBRARY_DIRS})
 
 set(VENDOR_SOURCES
     vendor/jsoncpp/jsoncpp.cpp
+    vendor/linenoise/linenoise.c
 )
 
 set(SOURCE_FILES
@@ -23,8 +28,8 @@ set(SOURCE_FILES
     Dictionary.cpp
     Word.cpp
     Gram.cpp
-    ${VENDOR_SOURCES}
-)
+    utils/color.cpp
+    ${VENDOR_SOURCES})
 
 add_executable(shingles ${SOURCE_FILES})
 #target_link_libraries(shingles PRIVATE ${JSONCPP_LIBRARIES})
