Fixed remaining parser bugs Added hints and completion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,20 +2,13 @@ cmake_minimum_required(VERSION 3.5)
 
 project(Shingles)
 
-# Prerequisites
-#find_package(PkgConfig REQUIRED)
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
-#pkg_check_modules(JSONCPP REQUIRED jsoncpp)
-set(JSONCPP_INCLUDE_DIRS vendor/jsoncpp)
-
 include_directories(
-    ${JSONCPP_INCLUDE_DIRS}
+    vendor/jsoncpp
     vendor/linenoise
     vendor/optionparser
 )
-#link_directories(${JSONCPP_LIBRARY_DIRS})
 
 set(VENDOR_SOURCES
     vendor/jsoncpp/jsoncpp.cpp
@@ -32,6 +25,3 @@ set(SOURCE_FILES
     ${VENDOR_SOURCES})
 
 add_executable(shingles ${SOURCE_FILES})
-#target_link_libraries(shingles PRIVATE ${JSONCPP_LIBRARIES})
-
-configure_file(input.txt input.txt COPYONLY)
